Fixed the Overflow

--- a/home/style.css
+++ b/home/style.css
@@ -543,12 +543,22 @@ button {
 .rbtn:hover {
   background-color: #00000025;
 }
+/* @media only screen and (max-width: 768px) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
+  }
+} */
 
-@media screen and (max-width: 60rem) {
+@media screen and (max-width: 768px) {
   * {
     font-size: 2vw;
+    /* overflow-x: hidden; */
   }
+  html,
   body {
+    /* width: 50vw; */
     overflow-x: hidden;
   }
   .hero {
@@ -690,6 +700,7 @@ button {
     margin-top: 3rem;
   }
   .serviceBox {
+    /* margin-top: 4rem; */
     width: 40rem;
     padding: 2rem;
     background-color: #f9f9f9;
@@ -733,7 +744,7 @@ button {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 4rem;
+    /* gap: 4rem; */
   }
   .about {
     width: 100vw;
